2008-01-16  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (nma_get_connected_icon): use a different icon to indicate an autoip
			connection
		- (nma_icons_free, nma_icons_zero, nma_icons_load_from_disk):
			housekeeping on the wired autoip icon

	* icons/nm-device-wired-autoip.png
	  icons/Makefile.am
		- new icon for wired-but-self-assigned-ip

	* src/applet-dbus-devices.c
		- (nma_dbus_device_activated_cb): change tooltip and notification icon
			when connected using an autoip address

2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/other-network-dialog.c
	  src/passphrase-dialog.c
		- (nma_show_vpn_failure_dialog, nma_show_vpn_login_banner_dialog,
		   nma_driver_notify, show_warning_dialog, nma_other_network_dialog_run,
		   nmi_passphrase_dialog_new): Sigh.  Widget needs to be realized so
			that it's ->window exists

2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/other-network-dialog.c
	  src/passphrase-dialog.c
		- (nma_show_vpn_failure_dialog, nma_show_vpn_login_banner_dialog,
		   nma_driver_notify, show_warning_dialog, nma_other_network_dialog_run,
		   nmi_passphrase_dialog_new): get the right behavior when faced with
			metacticy's focus stealing prevention; we really do want the key
			dialog to come up on top.  The issue is somewhat mitigated by the
			fact that any input won't really leak.

2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): really don't convert entries that
			were already converted

2008-01-08  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.h
		- Add prototype for nma_compat_move_wpa_eap_passwords()

2008-01-07  Dan Williams  <dcbw@redhat.com>

	* src/applet-compat.c
		- (copy_one_wpa_private_key_password): don't convert entries that
			were already converted

2008-01-07  Dan Williams  <dcbw@redhat.com>

	Fix gnome.org #359541, rh #220913, rh #220915

	* src/applet.c