@@ -1,3 +1,9 @@
+2008-01-17  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (nma_update_state): add note about autoip address to tooltip when
+			connected to wired connections with autoip
+
 2008-01-16  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
